src/assets/sass/custom/_custom.scss
/* ... */
.wave_shape_mxW {
  max-width: 445px;
}
.my_acctn_list_pl0 {
  .lps_user_info {
    padding-left: 0;
  }
}
.lps_hash_tags_wrp {
  .hashtag {
    .theme_btn {
      margin-top: 10px;
      margin-right: 5px;
    }
  }
}
.more_zindex {
  position: relative;
  z-index: 2;
}
.lps_NewChngCon {
  .pos_wrp {
    p {
      font-size: 16px;
      font-weight: $regular;
    }
  }
}
.lps_widgets_none {
  display: none;
}

.para_list_mb {
  margin-bottom: 30px;
  h4 {
    margin-bottom: 10px;
  }
}
.hashtags {
  .theme_btn {
    margin-right: 5px;
    margin-bottom: 5px;
    min-width: 80px;
    padding: 7px 4px;
    // &.theme_outline_light {
    //   // &:hover {
    //   //   color: #f8f9fa;
    //   //   background: transparent none;
    //   //   border-color: #f8f9fa;
    //   // }
    //   // &.active {
    //   //   color: #212529;
    //   //   background-color: #f8f9fa;
    //   //   border-color: #f8f9fa;
    //   // }
    // }
  }
}
.lps_inline_img_wrp {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}
.lps_loader_wrp {
  margin: 100px auto 75px auto;
  display: block;
  width: 100%;
  text-align: center;
  img {
    width: 50px;
    height: 50px;
    position: relative;
    -webkit-animation: load3 1.4s infinite linear;
    animation: load3 1.4s infinite linear;
  }
}
.lps_circle_white1 {
  display: inline-block;
  line-height: 0;
  img {
    width: 30px;
  }
}

.lps_header_end {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}
.followers_block_none {
  display: none;
}
.main_feed_cont {
  .list_view {
    display: block;
  }
}
.lps_product_grid_wrp {
  .lps_product_grid {
    display: grid;
  }
}
figure {
  margin: 0;
}
.follow_overflow {
  .lps_sm_folow {
    font-size: 18px;
    font-weight: 500;
  }
}
.radio_title {
  font-size: 18px;
  line-height: 22px;
}
span.textRange {
  display: block;
  text-align: right;
  background-color: $white;
  color: $gray-1000;
  padding: 10px;
  font-size: 14px;
  position: relative;
  top: -6px;
}
.icn_hover_chng {
  .icn_hvrA {
    display: none;
  }
  &.active {
    .icn_dfltD {
      display: none;
    }
    .icn_hvrA {
      display: inline-block;
    }
  }
}
p.para18L30 {
  font-size: 18px;
  line-height: 30px;
}
.lps_hrSep {
  border-top: 5px solid $white-600 !important;
}
.VspcBtwn {
  height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 20px 15px;
  .hash_tag_links {
    margin-top: 55px;
    .hashtag {
      text-align: left;
      .theme_btn {
        padding: 7px 10px;
      }
    }
  }
}
.more_tag {
  line-height: 16px;
  margin-top: 10px;
  letter-spacing: 0.16px;
}
.repost_div_btm {
  padding: 15px;
}
.Opcty5 {
  opacity: 0.5;
}
.inline_WText {
  img {
    width: 20px;
    margin: 0 5px;
  }
}

.see_also.exploreTags {
  margin-bottom: 15px;
}
.feature_txt {
  font-weight: 500;
  font-size: 16px;
  margin-top: 13px;
  display: block;
  color: $bg_grayCCC;
}

.text_sendry {
  .txtarea_modify {
    border-bottom: 0;
    border-radius: 5px 0 0 5px;
  }
  .textRange {
    border-radius: 0 0 5px 5px;
    border: 1px solid $brand-primary;
    border-top: 0;
  }
}
.top__sm_header {
  background-color: $brand-secondary;
  padding: 0 15px;
  height: 44px;
  position: inherit;
  .lp_nav_customize {
    margin: 0;
    li {
      list-style: none;
      .nav-link {
        line-height: 0;
        img {
          width: 16px !important;
        }
      }
    }
  }
}
.inline_wrp {
  .select_modify {
    border-color: $white;
    background-color: $bg_grayCCC;
    margin-left: 20px;
  }
  .Atag {
    margin-left: 20px;
  }
}
.mail_about_wrp {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 30px;
  .hr_seprator {
    display: inline-block;
    border-bottom: 1px solid #fff;
    min-width: 227px;
  }
}
.paint_tool_wrp {
  text-align: right;
  margin-bottom: 10px;
  a {
    img {
      width: 30px;
    }
  }
}
.lps_img_fixed {
  height: 320px;
  text-align: center;
  img {
    width: 100%;
    height: 100%;
    min-height: 100%;
    object-fit: cover;
  }
  &.add_image {
    padding: 60px 0;
    text-align: center;
    width: 160px;
    margin: 0 auto;
    height: 100%;
  }
}
.hashtags {
  text-align: left;
}
.lps_floatRight {
  float: right;
}
.lps_tb_para {
  padding: 30% 15px;
  text-align: center;
}
.overlap_menu {
  position: relative;
  z-index: 2;
}
.count_badge {
  position: absolute;
  top: -4px;
  right: -10px;
  width: 17px;
  height: 17px;
  line-height: 18px;
  font-size: 11px;
  text-align: center;
  background-color: $bg_grayCCC;
  color: $brand-secondary;
  border-radius: 50%;
  font-weight: 600;
}
figure.feed_fig310 {
  height: 310px;
  overflow: hidden;
  img {
    width: 100%;
    height: 100%;
    object-position: center;
    object-fit: cover;
  }
}
.lps_img_fixed.lps_fig90 {
  padding: 15px 0;
  text-align: center;
  width: 160px;
  margin: 0 auto;
  height: 150px;
}
.follow_overflow {
  height: 490px;
  overflow-y: auto;
}
.text_inherit {
  text-transform: inherit !important;
}
/* ... */

